# yk_sandbox

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_win.sh  install_apt.sh  mod.ts
cmake/: linux.cmake  mingw.cmake  utility.cmake
scripts/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  core.cpp  core.hpp
